--- a/BanHangOnline/appsettings.json
+++ b/BanHangOnline/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BanHangOnline": "Data Source=MSI;Initial Catalog=BanHangOnline2;Integrated Security=True;Encrypt=False"
+    "BanHangOnline": "Data Source=MSI;Initial Catalog=BanHangOnline2;Integrated Security=True"
   }
 }
